FIX: Filter dropdowns were only partially visible

--- a/src/gui/Components/ScreenElements/Table/Table.module.css
+++ b/src/gui/Components/ScreenElements/Table/Table.module.css
@@ -40,6 +40,7 @@
   min-height: 20px;
   display: flex;
   flex-direction: row;
+  z-index: 100;
 }
 
 .header {
